# rpi2040-keyboard-echo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: tusb_config.h
scripts/: pyproject.toml  test.py
src/: main.cpp  usb_descriptors.c
